--- a/PRPCA/PRPCA/Info.plist
+++ b/PRPCA/PRPCA/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>S3</key>
+	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>$(PRPCA) For Recording New Clip</string>
 	<key>NSCameraUsageDescription</key>
